--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 {
+  "name": "stock-tracker",
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
